--- a/package.json
+++ b/package.json
@@ -14,24 +14,25 @@
   "license": "ISC",
   "dependencies": {
     "dialog-polyfill": "^0.4.4",
-    "material-design-lite": "^1.2.1"
+    "material-design-lite": "^1.2.1",
+    "serviceworker-webpack-plugin": "^0.1.5"
   },
   "devDependencies": {
+    "autoprefixer": "^6.3.6",
+    "copy-webpack-plugin": "^3.0.1",
     "css-loader": "^0.25.0",
+    "elm": "^0.17.1",
+    "elm-hot-loader": "^0.3.2",
     "elm-webpack-loader": "^3.0.6",
+    "extract-text-webpack-plugin": "^1.0.1",
     "file-loader": "^0.9.0",
+    "html-webpack-plugin": "^2.17.0",
+    "rimraf": "^2.5.2",
     "style-loader": "^0.13.1",
     "url-loader": "^0.5.7",
     "webpack": "^1.13.2",
     "webpack-dev-middleware": "^1.7.0",
     "webpack-dev-server": "^1.15.2",
-    "extract-text-webpack-plugin": "^1.0.1",
-    "autoprefixer": "^6.3.6",
-    "copy-webpack-plugin": "^3.0.1",
-    "elm": "^0.17.1",
-    "elm-hot-loader": "^0.3.2",
-    "html-webpack-plugin": "^2.17.0",
-    "rimraf": "^2.5.2",
     "webpack-merge": "^0.14.1"
   }
 }
