--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   "dependencies": {
     "dialog-polyfill": "^0.4.4",
     "material-design-lite": "^1.2.1",
+    "rrule": "git://github.com/jkbrzt/rrule.git#fd5326d365dc133bc2387a174cdac58283f2c404",
     "serviceworker-webpack-plugin": "^0.1.5"
   },
   "devDependencies": {
